# python-package-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  sweep.yaml
.github/workflows/: commit.yml  release.yml  update-cruft-id.yml
example_package/: __init__.py  foo.py
tests/: test_foo.py  test_template.py
{{ cookiecutter.package_name }}/: .cruft.json  .pre-commit-config.yaml  README.md
{{ cookiecutter.package_name }}/.github/workflows/: commit.yml
{{ cookiecutter.package_name }}/tests/: test_foo.py
{{ cookiecutter.package_name }}/{{ cookiecutter.package_slug }}/: __init__.py  foo.py
{{ cookiecutter.package_slug }}/: .cruft.json  README.md  pyproject.toml
{{ cookiecutter.package_slug }}/.github/workflows/: release.yml
