[tool.poetry]
name = "python-package-template"
version = "0.1.0"
description = "Cookiecutter Python Package Template"
authors = ["dan <danbianchini@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
cookiecutter = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests/"
